# monicar

./: README.md
monicar_control/: package.xml  setup.cfg  setup.py
monicar_control/launch/: blob_all.launch.py  blob_chase.launch.py  chase_the_ball.launch.py  motor.launch.py  traffic_all.launch.py  yolo_all.launch.py  yolo_chase.launch.py  yolo_traffic.launch.py
monicar_control/monicar_control/: blob_chase.py  chase_gostop_yolo.py  chase_object_yolo.py  chase_the_ball.py  chase_traffic_yolo.py  motor_control.py
monicar_control/monicar_control/submodules/: myutil.py
monicar_control/param/: find_ball.yaml  motor.298n2Wheel.yaml  motor.4blob.yaml  motor.4chase.yaml  motor.jetbot.yaml  motor.jetracer.yaml  motor.motorhat2wheel.yaml  motor.motorhatSteer.yaml  motor.nuriBldc.yaml  motor.pca9685Steer.yaml  motor.yaml  traffic.yaml  yolo.yaml  yolo_jessicar.yaml
monicar_cv/: CMakeLists.txt  package.xml  setup.cfg  setup.py
monicar_cv/launch/: blob_detect.launch.py  csicam.launch.py  csivideo.launch.py  usbcam.launch.py  usbvideo.launch.py
monicar_cv/monicar_cv/: csi_pub.py  find_ball.py  usbcam_pub.py  webcam_pub.py
monicar_cv/param/: cvparam.yaml  find_ball.yaml
monicar_teleop/: CMakeLists.txt  package.xml  setup.cfg  setup.py
monicar_teleop/launch/: teleop_joy.launch.py  teleop_keyboard.launch.py
monicar_teleop/monicar_teleop/: teleop_joy.py  teleop_keyboard.py
monicar_teleop/param/: teleop_joy.param.yaml  teleop_keyboard.param.yaml
script/: boardSelect.sh  camSelect.sh  carSelect.sh  jetRccarParam.sh
