<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monicar_teleop</name>
  <version>0.0.1</version>
  <description>
    Teleoperation node using keyboard for monicar
  </description>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/bishopearson/omo_r1mini</url>
  <maintainer email="zeta0707@gmail.com">ChangWhan Lee</maintainer>
  <author email="zeta0707@gmail.com">ChangWhan Lee</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
